--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>badcode</module>
         <module>java17</module>
+        <module>java21</module>
     </modules>
 
     <build>
